refactor: Removing RepOrder date completion as per feedback. Reverting changes made to RepOrderService fix: changing to use to the PartnerResolver for partner validation. Added/changed tests.